# EventMesh

contracts/: Cargo.toml  EVENTMESH_NFT.md  README.md
contracts/src/: factory.rs  lib.rs  nft.rs
contracts/test_snapshots/factory/test/: test_factory_create_event.1.json
contracts/test_snapshots/nft/test/: test_initialize.1.json  test_prevent_double_mint.1.json
contracts/test_snapshots/test/: initialize_and_update_admin.1.json  test_burn_nft.1.json  test_invalid_metadata.1.json  test_mint_nft.1.json
